# bald-engine

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  handler_interface.cpp  library.cpp  library.h  main.cpp  run.sh  text.txt
engine/: CMakeLists.txt
engine/examples/: window_example.cpp
engine/res/shaders/: basic.frag  basic.vert  default.frag  default.vert  sprite.frag  sprite.vert  texture.vert
engine/src/: application.cpp  application.h  bald.h  bald.hpp  entry_point.h  layer.cpp  layer.h  layer_stack.cpp  layer_stack.h  pch.h
engine/src/core/: core.h  core.hpp  pch.h  pch.hpp
engine/src/core/app/: application.cpp  application.h  application.hpp  entry_point.h  layer.h  layer.hpp  layer_stack.cpp  layer_stack.h  layer_stack.hpp  scene.cpp  scene.hpp
engine/src/core/controllers/: camera_2d_controller.cpp  camera_2d_controller.hpp  time_controller.hpp
engine/src/core/debug/: bald_assert.h  bald_assert.hpp  generate_body.h  logger.cpp  logger.h
engine/src/core/debug/logger/: log_manager.cpp  log_manager.h  log_manager.hpp  logger.cpp  logger.h
engine/src/core/debug/ui/: imgui_layer.cpp  imgui_layer.h  imgui_layer.hpp
engine/src/core/ecs/: component.hpp  entity.hpp  registry.hpp  system.hpp
engine/src/core/error/: expected.h  unexpected.h
engine/src/core/events/: event.h  event.hpp  event_bus.hpp  event_manager.cpp  event_manager.h  key_events.h  key_events.hpp  layer_events.h  layer_events.hpp  mouse_events.h  mouse_events.hpp  window_events.h  window_events.hpp
engine/src/core/events/callback/: event_function_handler.h  event_handler.h  event_handler_interface.cpp  event_handler_interface.h
engine/src/core/graphics/: window.cpp  window.h  window.hpp
engine/src/core/graphics/renderer/rendering_device/buffers/: buffer.cpp  buffer.h  index_buffer.cpp  index_buffer.h  vertex_array.cpp  vertex_array.h
engine/src/core/graphics/rendering/: camera_2d.cpp  camera_2d.h  camera_2d.hpp  shader.cpp  shader.h  sprite.cpp  sprite.h  sprite.hpp
engine/src/core/graphics/rendering/buffers/: buffer.cpp  index_buffer.cpp  index_buffer.h  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp  vertex_buffer.h  vertex_buffer.hpp  vertex_buffer_layout.cpp  vertex_buffer_layout.h  vertex_buffer_layout.hpp
engine/src/core/graphics/rendering/materials/: material.cpp  material.hpp
engine/src/core/graphics/rendering/mesh/: mesh.cpp  mesh.h
engine/src/core/graphics/rendering/model/: model.cpp  model.h
engine/src/core/graphics/rendering/rendering_device/: batch_2d.cpp  batch_2d.h  batch_2d.hpp  renderer_2d.cpp  renderer_2d.h  renderer_2d.hpp
engine/src/core/graphics/rendering/rendering_device/buffers/: buffer.cpp  buffer.h  index_buffer.cpp  index_buffer.h  vertex_array.cpp  vertex_array.h
engine/src/core/graphics/rendering/shaders/: shader.cpp  shader.h  shader.hpp
engine/src/core/graphics/rendering/textures/: texture.cpp  texture.h  texture.hpp
engine/src/core/input/: input_manager.cpp  input_manager.h  input_manager.hpp  key_codes.h
engine/src/core/models/: timer.cpp  timer.h
engine/src/core/platform/graphics/opengl/imgui/: imgui_impl_opengl3.cpp
engine/src/core/platform/graphics/renderer/rendering_device/buffers/: opengl_buffer.cpp  opengl_buffer.h  opengl_index_buffer.cpp  opengl_index_buffer.h  opengl_vertex_array.cpp  opengl_vertex_array.h
engine/src/core/platform/graphics/rendering/: opengl_shader.cpp  opengl_shader.h
engine/src/core/platform/graphics/rendering/rendering_device/buffers/: opengl_buffer.h  opengl_index_buffer.cpp  (+3 more)
engine/src/core/platform/opengl/buffers/: opengl_buffer.h  opengl_index_buffer.cpp  opengl_index_buffer.h  opengl_index_buffer.hpp  opengl_vertex_array.cpp  opengl_vertex_array.h  opengl_vertex_array.hpp  opengl_vertex_buffer.cpp  opengl_vertex_buffer.h  opengl_vertex_buffer.hpp
engine/src/core/platform/opengl/shaders/: opengl_shader.cpp  opengl_shader.h  opengl_shader.hpp
engine/src/core/platform/opengl/textures/: opengl_texture.cpp  opengl_texture.h  opengl_texture.hpp
engine/src/core/platform/rendering/rendering_device/buffers/: opengl_buffer.cpp  opengl_buffer.h  opengl_index_buffer.cpp  opengl_index_buffer.h  opengl_vertex_array.cpp  opengl_vertex_array.h
engine/src/core/utils/: asset_manager.cpp  asset_manager.h  file_manager.cpp  file_manager.h  generate_body.h  image.cpp  image.h  image.hpp  math_utils.h  math_utils.hpp  split_string.cpp  timer.h  type_id.h  type_name.h  types.h  utils.h  utils.hpp
engine/src/core/utils/file_manager/: file_manager.cpp  file_manager.h
engine/src/core/utils/rtti/: type_id.h  type_name.h
engine/src/core/utils/time/: time.h  time.hpp  timer.cpp  timer.h
engine/src/events/: event.h  event_manager.cpp  event_manager.h  key_events.h  layer_events.h  mouse_events.h  window_events.h
engine/src/events/callback/: async_function_handler.h  event_async_function_handler.h  event_function_handler.h  event_handler.h  event_handler_interface.cpp  event_handler_interface.h  function_handler.h  handler.h  handler_interface.h
engine/src/graphics/: window.cpp  window.h
engine/src/graphics/rendering/rendering_device/opengl/buffers/: buffer.cpp  buffer.h  index_buffer.cpp  index_buffer.h
engine/src/input/: input_manager.cpp  input_manager.h
engine/src/math/: vec2.h  vec3.cpp  vec3.h
engine/src/utils/: bald_assert.cpp  bald_assert.h  math_utils.h  timer.cpp  type_id.h  type_name.h  utils.h
engine/tests/: glfw3_and_glad_init_test.cpp  includes.cpp  input_test.cpp  rtti_test.cpp  test_buffer.cpp  test_event_system.cpp  test_file_manager.cpp  test_file_manager.txt  test_glfw3_and_glad_init.cpp  test_index_buffer.cpp  test_input.cpp  test_mat4.cpp  test_rtti.cpp  test_shader.cpp  test_split_string.cpp  test_vertex_array.cpp  test_vertex_buffer.cpp  test_window.cpp
sandbox/: CMakeLists.txt  sandbox.cpp
sandbox/examples/: application_example.cpp  ecs_example.cpp  event_time_test.cpp  events_example.cpp  input_example.cpp  model_example.cpp
sandbox/res/model_example/shaders/: basic.vert
sandbox/src/: sandbox.cpp
src/: Log.cpp  (+2 more)
(+85 files in other folders)
